# customer-support-chatbot

./: .env.local  .gitignore  DESIGN.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  task.md  vercel.json
api/: .gitignore  index.py
backend/: .env.example  .gitignore  README.md  __init__.py  main.py  schemas.py  settings.py
backend/src/mcp/: mcp_client.py  verify_customer.py
backend/src/meridian_agents/: __init__.py  customer_support_agent.py  mcp_agent.py
backend/src/routers/: auth.py  chat.py
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/login/: page.tsx
src/components/: AppToaster.tsx
src/lib/: customerSession.ts
src/styles/: globals.css
src/types/: customer.ts
